--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,18 @@ image: python:3.7
 stages:
   - test
 
+variables:
+  REPOSITORY: https://gitlab.com/api/v4/projects/20123159/packages/pypi
+  USERNAME: antlouiz
+  PASSWORD: UUyJycPigLwZamybXxpt
+
 test:
   stage: test
 
   script:
     - pip install -r requirements.txt
     - pytest
+  after_script:
+    - mv .pypirc ~/.pypirc
+    - pip install -r requirements.txt
+    - python -m twine upload --repository gitlab dist/*
