--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,5 @@ test:
     - pytest
   after_script:
     - mv .pypirc ~/.pypirc
-    - pip install -r requirements.txt
+    - python3 setup.py sdist bdist_wheel
     - python -m twine upload --repository gitlab dist/*
